--- a/views/keygenPage.twig
+++ b/views/keygenPage.twig
@@ -4,17 +4,29 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Keygen</title>
-  <!-- <link rel="stylesheet" type="text/css" href="css/default.css"> -->
+  <title>Enroll</title>
+  <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
-    <h1>Keygen</h1>
-    <p>This page will generate a certificate for use by your browser to
-    authenticate to web servers that support 'client certificates'.</p>
+    <div id="container">
+    <h1>Enroll</h1>
+    <p>
+You reached this page because you currently do not have a client 
+certificate installed or you chose not to provide one when loading this page. 
+    </p>
 
+    <p>
+Here you can generate a new certificate if you wish and after installation try
+again. Press the "Generate" button below to start the enrollment process. After
+this has completed you should get a notification by your browser that a client
+certificate was successfully installed.
+    </p>
+
+   
     <form method="post">
         <keygen name="spkac" challenge="{{ certChallenge|e }}" keytype="RSA">
         <input type="submit" value="Generate">
     </form>
+    </div>
 </body>
 </html>
