much better user flow now and better documentated, switch to JSON responses according to spec

--- a/views/missingFingerprint.twig
+++ b/views/missingFingerprint.twig
@@ -4,19 +4,21 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Non-matching Fingerprint</title>
+  <title>IndieCert</title>
   <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
     <div id="container">
-    <h1>Problem with your URL Claim</h1>
+    <h1>IndieCert</h1>
     <p>
-IndieCert was unable to find a matching fingerprint on your claimed URL 
+    <strong>
+IndieCert was unable to find a matching fingerprint on your claimed URL
 <code>{{ me|e }}</code>.
+    </strong>
     </p>
 
     <p>
-You can easily fix this by placing the following fragment in the 
+You can easily fix this by placing the following fragment in the
 <code>&lt;head&gt;</code> section of your HTML page:
     </p>
 
@@ -27,7 +29,7 @@ You can easily fix this by placing the following fragment in the
 </blockquote>
 
     <p>
-When you are done doing that you can refresh this page and you should be 
+When you are done doing that you can <a href="">reload</a> this page and you should be
 redirected to the service that was requesting authentication and be logged in.
     </p>
     </div>
