update httpd indiecert.net httpd file, and default landing page text

--- a/views/welcomePage.twig
+++ b/views/welcomePage.twig
@@ -11,17 +11,16 @@
     <div id="container">
     <h1>IndieCert</h1>
     <p>
-Welcome to IndieCert! IndieCert is a service to login to services using client
-certificates in a distributed way. A service can use an IndieCert instance of
-choice, or run their own!
+Welcome to IndieCert! IndieCert is a service to make use of client certificates
+to authenticate to services. This service is intended as a reference
+implementation of IndieCert. All code is available under the AGPLv3 license
+and anyone can run their own instance of this code.
     </p>
     <p>
-If you want more
-information about IndieCert you can check out <a href="https://www.tuxed.net/fkooman/blog/indiecert.html">this</a> blog post!
-    </p>
-    <p>
+If you want more information about IndieCert you can check out
+<a href="https://www.tuxed.net/fkooman/blog/indiecert.html">this</a> blog post,
 You can find the source code
-<a href="https://github.com/fkooman/indiecert">here</a>!
+<a href="https://github.com/fkooman/indiecert">here</a>.
     </p>
     </div>
 </body>
