--- a/web/css/style.css
+++ b/web/css/style.css
@@ -8,6 +8,11 @@ div#container {
     margin: 0 auto;
 }
 
+h1 {
+    border-bottom: 1px solid #000;
+    padding-bottom: 10px;
+}
+
 code { 
     background: hsl(220, 80%, 90%); 
 }
