--- a/views/welcomePage.twig
+++ b/views/welcomePage.twig
@@ -19,7 +19,7 @@ and anyone can run their own instance of this code.
     <p>
 If you want more information about IndieCert you can check out
 <a href="https://www.tuxed.net/fkooman/blog/indiecert.html">this</a> blog post,
-You can find the source code
+you can find the source code
 <a href="https://github.com/fkooman/indiecert">here</a>.
     </p>
     </div>
