mention supported browsers so far

--- a/views/enrollPage.twig
+++ b/views/enrollPage.twig
@@ -12,7 +12,18 @@
     <h1>Enroll</h1>
     <p>
 Here you can generate a new client certificate to be able to use IndieCert.
+    </p>
+    <p>
+The following browsers and platforms were tested and are working:
+    </p>
+    <ul>
+        <li>Firefox (Linux, Android)</li>
+        <li>Chromium (Linux)</li>
+        <li>Chrome (Android)</li>
+    </ul>
+    <p>
 Press the "Generate" button below to start the certificate generation process.
+    </p>
 After this has completed you should get a notification by your browser that a
 client certificate was successfully installed.
     </p>
