- add option to remember approval for a week

--- a/views/askConfirmation.twig
+++ b/views/askConfirmation.twig
@@ -16,6 +16,8 @@
     </p>
 
     <form method="post" action="">
+        <label for="remember">Remember approval for 1 week</label>
+        <input type="checkbox" id="remember" name="remember" />
         <button class="reject" type="submit" name="approval" value="reject">Reject</button>
         <button class="approve" type="submit" name="approval" value="approve">Approve</button>
     </form>
