--- a/views/welcomePage.twig
+++ b/views/welcomePage.twig
@@ -22,6 +22,19 @@ If you want more information about IndieCert you can check out
 you can find the source code
 <a href="https://github.com/fkooman/indiecert">here</a>.
     </p>
+    <h2>Try It!</h2>
+    <p>
+Here you can try out IndieCert! You will be guided through generating a client
+certificate and adding the fingerprint to your homepage!
+    </p>
+
+    <form method="get" action="auth">
+    <label for="me">Web Address:</label>
+    <input type="hidden" name="redirect_uri" value="{{ redirect_uri|e }}">
+    <input type="text" name="me" id="me" placeholder="yourdomain.com">
+    <input type="submit" value="Sign In">
+    </form>
+
     </div>
 </body>
 </html>
