- make it possible to disable server certificate check for use by the Docker   image and local development - update the templates to remove some old text, make them more colorful and   update the welcome page substantially

--- a/views/authenticatedPage.twig
+++ b/views/authenticatedPage.twig
@@ -9,14 +9,14 @@
 </head>
 <body>
     <div id="container">
-    <h1>IndieCert</h1>
+    <a class="header" href="welcome"><h1>IndieCert</h1></a>
 
-    <p>
+    <p class="info">
 You are now successfully authenticated as <strong>{{ me|e }}</strong>!
     </p>
 
     <p>
-You can read more about IndieCert in this <a href="https://www.tuxed.net/fkooman/blog/indiecert.html">blog</a> entry. For example how it works exactly, and how to implement it in your own service, or run your own instance!
+    Take me <a href="welcome">back</a> to the homepage!
     </p>
     </div>
 </body>
