--- a/views/enrollPage.twig
+++ b/views/enrollPage.twig
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div id="container">
-    <h1>Enroll</h1>
+    <a class="header" href="welcome"><h1>IndieCert</h1></a>
     <p>
 Here you can generate a new client certificate to be able to use IndieCert.
     </p>
@@ -45,9 +45,8 @@ services supporting IndieCert!
 
     <div class="footnotes">
         <span class="sup">1</span>
-        Unfortunately, Firefox seems to sometimes need a restart before
-        it will pick up authenticating with a client certificate after it was
-        installed.
+        You may need to restart Firefox before it will pick up authenticating
+        with a client certificate after it was installed...
     </div>
 
     </div>
