--- a/views/noCert.twig
+++ b/views/noCert.twig
@@ -9,18 +9,11 @@
 </head>
 <body>
     <div id="container">
-    <h1>IndieCert</h1>
-    <p>
-Welcome to IndieCert! Decentralized authentication for the IndieWeb using
-client certificates!
-    </p>
-
-    <p>
-    <strong>
+    <a class="header" href="welcome"><h1>IndieCert</h1></a>
+    <p class="warn">
 You reached this page because you do not yet have a client certificate
 installed in your browser/operating system or declined to authenticate with it
 to IndieCert.
-    </strong>
     </p>
 
     <p>
@@ -31,9 +24,9 @@ certificate restart your browser<span class="sup">1</span> and try again!
 
     <div class="footnotes">
         <span class="sup">1</span>
-        unfortunately most browser will require you to restart, or use
+        unfortunately some browser will require you to restart, or use
         'private mode' to forget that you did not want to authenticate to a
-        site using the client certificate.
+        site using the client certificate...
     </div>
     </div>
 </body>
