--- a/views/askConfirmation.twig
+++ b/views/askConfirmation.twig
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div id="container">
-    <h1>IndieCert</h1>
+    <a class="header" href="welcome"><h1>IndieCert</h1></a>
     <p>
 <strong>{{ host|e }}</strong> wants to confirm your identity
 <strong>{{ me|e }}</strong>.
