add FAQ and footer

--- a/views/askConfirmation.twig
+++ b/views/askConfirmation.twig
@@ -22,6 +22,10 @@
         <button class="approve" type="submit" name="approval" value="approve">Approve</button>
     </form>
 
+    <div class="footer">
+        <a href="faq">FAQ</a> | IndieCert
+    </div>
+
     </div>
 </body>
 </html>
