--- a/views/authenticatedPage.twig
+++ b/views/authenticatedPage.twig
@@ -18,6 +18,11 @@ You are now successfully authenticated as <strong>{{ me|e }}</strong>!
     <p>
     Take me <a href="welcome">back</a> to the homepage!
     </p>
+
+    <div class="footer">
+        <a href="faq">FAQ</a> | IndieCert
+    </div>
+
     </div>
 </body>
 </html>
