--- a/views/enrollPage.twig
+++ b/views/enrollPage.twig
@@ -49,6 +49,9 @@ services supporting IndieCert!
         with a client certificate after it was installed...
     </div>
 
+    <div class="footer">
+        <a href="faq">FAQ</a> | IndieCert
+    </div>
     </div>
 </body>
 </html>
