--- a/views/missingFingerprint.twig
+++ b/views/missingFingerprint.twig
@@ -36,6 +36,10 @@ You can easily fix this by placing the following fragment in the
 When you are done doing that you can <a href="">reload</a> this page and you should be
 redirected to the service that was requesting authentication and be logged in.
     </p>
+
+    <div class="footer">
+        <a href="faq">FAQ</a> | IndieCert
+    </div>
     </div>
 </body>
 </html>
