--- a/views/noCert.twig
+++ b/views/noCert.twig
@@ -28,6 +28,11 @@ certificate restart your browser<span class="sup">1</span> and try again!
         'private mode' to forget that you did not want to authenticate to a
         site using the client certificate...
     </div>
+
+    <div class="footer">
+        <a href="faq">FAQ</a> | IndieCert
+    </div>
+
     </div>
 </body>
 </html>
