--- a/views/welcomePage.twig
+++ b/views/welcomePage.twig
@@ -49,6 +49,13 @@ name or URL to a page you can modify. It <strong>MUST</strong> be reachable over
     <input type="text" name="me" id="me" placeholder="yourdomain.com">
     <input type="submit" value="Sign In">
     </form>
+    <p>
+You can check the <a href="faq">Frequently Asked Questions</a>.
+    </p>
+    
+    <div class="footer">
+        <a href="faq">FAQ</a> | IndieCert
+    </div>
 
     </div>
 </body>
