update FAQ page a bit more

--- a/views/faqPage.twig
+++ b/views/faqPage.twig
@@ -30,6 +30,10 @@ deploying it and browser support for actually generating these beautiful
 client certificates... So it is not perfect, but at least on some browsers and
 mobile devices it works really well.
     </p>
+    <h3>Where can I get more information?</h3>
+    <p>
+You can read this <a href="https://www.tuxed.net/fkooman/blog/indiecert.html">blog</a> entry.
+    </p>    
 
     <h3>Supported Browsers</h3>
     <p>
@@ -59,12 +63,17 @@ far as I know Safari on iOS does not support <code>&lt;keygen&gt;</code> at
 all, but I don't have an iDevice to test with, so it remains speculation.
     </p>
 
-    <h3>How can I help?</h3>
+    <h3>How can I help or get help?</h3>
     <p>
 Test it out on as many browsers and devices possible and create issues on
 <a href="https://github.com/fkooman/indiecert/issues">GitHub</a>, and if you
 can patches to get Safari to work better, IE at all and come up with solutions
 for iDevices :-)
+    </p>
+    <p>
+If you have any questions, please post them as a GitHub issue as well, or 
+contact me directly. Look <a href="https://www.tuxed.net/fkooman/">here</a> to
+find ways of contacting me.
     </p>
 
     <div class="footer">
