- add RP documentation

--- a/views/faqPage.twig
+++ b/views/faqPage.twig
@@ -42,11 +42,7 @@ home page if it is not (yet) there when you try to authenticate.
 
     <h3>How can I become a relying party?</h3>
     <p>
-You can read the
-<a href="https://www.tuxed.net/fkooman/blog/indiecert.html">blog</a> entry on
-how to integrate your application as a relying party. The protocol is still
-under development and will still have some minor modifications, especially
-regarding linking the authentication request and response to avoid CSRF.
+See the instructions <a href="rp">here</a>.
     </p>
 
     <h3>How secure is this? What if the IndieCert server gets compromised?</h3>
