--- a/views/welcomePage.twig
+++ b/views/welcomePage.twig
@@ -37,6 +37,11 @@ also Docker
 for easily running your own instance!
     </p>
 
+    <h2>Relying Party?</h2>
+    <p>
+Check out the relying party <a href="rp">instructions</a>!
+    </p>
+
     <h2>Try It!</h2>
     <p>
 Here you can try out IndieCert! You will be guided through generating a client
