- substantially update relying party documentation

--- a/views/faqPage.twig
+++ b/views/faqPage.twig
@@ -24,7 +24,7 @@ Twitter and GitHub.
 
     <h3>Why client certificates?</h3>
     <p>
-They always fascinated me. This secure technology is available in every
+They always fascinated me. This secure technology is available in almost every
 browser, but no one uses it! Of course, this is due to the difficulty in
 deploying it and browser support for actually generating these beautiful
 client certificates... So it is not perfect, but at least on some browsers and
@@ -108,7 +108,8 @@ instance of IndieCert. You can find the code and installation instructions in
 the GitHub <a href="https://github.com/fkooman/indiecert">repository</a>. RPMs
 are available for CentOS/Red Hat Enterprise Linux and Fedora. You can also run
 a Docker
-<a href="https://github.com/fkooman/indiecert/tree/master/docker">instance</a>.
+<a href="https://github.com/fkooman/indiecert/tree/master/docker">instance</a>,
+ideal for testing while developing your relying party!
     </p>
 
     <h3>Where can I get more information?</h3>
