in case there was no certificate authentication mention that you need a certificate issued by IndieCert (issue #2)

--- a/views/noCert.twig
+++ b/views/noCert.twig
@@ -12,8 +12,8 @@
     <a class="header" href="welcome"><h1>IndieCert</h1></a>
     <p class="warn">
 You reached this page because you do not yet have a client certificate
-installed in your browser/operating system or declined to authenticate with it
-to IndieCert.
+installed in your browser/operating system that was issued by IndieCert or
+declined to authenticate with it to IndieCert.
     </p>
 
     <p>
