--- a/views/askConfirmation.twig
+++ b/views/askConfirmation.twig
@@ -15,7 +15,7 @@
 <strong>{{ me|e }}</strong>.
     </p>
 
-    <form method="post" action="">
+    <form method="post" action="{{ confirmUri|e }}">
         <label for="remember">Remember approval for 1 week</label>
         <input type="checkbox" id="remember" name="remember" />
         <button class="reject" type="submit" name="approval" value="reject">Reject</button>
