default response type for verification is application/x-www-form-urlencoded

--- a/views/relyingPartyPage.twig
+++ b/views/relyingPartyPage.twig
@@ -163,9 +163,8 @@ Pragma: no-cache
 It is also possible to receive the response in
 <code>application/x-www-form-urlencoded</code> format by using the
 <code>Accept: application/x-www-form-urlencoded</code> header instead of the
-<code>Accept: application/json</code> header. The default is
-<code>application/json</code>.
-
+<code>Accept: application/json</code> header. For now the default is
+<code>application/x-www-form-urlencoded</code>, but you MUST specify it.
     </p>
 
     <h3>Security Considerations</h3>
